# rs-ioc-vault

./: .gitignore  Cargo.toml  Makefile.toml  README.ja.md  README.md  config.toml.example
crates/ioc-vault-adapters/: Cargo.toml
crates/ioc-vault-adapters/src/: cisa_kev.rs  lib.rs  threatfox.rs  urlhaus.rs
crates/ioc-vault-cli/: Cargo.toml
crates/ioc-vault-cli/src/: config.rs  main.rs
crates/ioc-vault-collect/: Cargo.toml
crates/ioc-vault-collect/src/: lib.rs
crates/ioc-vault-core/: Cargo.toml
crates/ioc-vault-core/src/: decay.rs  defang.rs  error.rs  lib.rs  normalize.rs  query.rs  types.rs
crates/ioc-vault-export/: Cargo.toml
crates/ioc-vault-export/src/: lib.rs
crates/ioc-vault-store/: Cargo.toml
crates/ioc-vault-store/src/: error.rs  lib.rs
crates/rs-ioc-vault/: Cargo.toml
crates/rs-ioc-vault/examples/: quickstart.rs
crates/rs-ioc-vault/src/: lib.rs
docs/: architecture.ja.md  architecture.md  cli.ja.md  cli.md  library.ja.md  library.md  usecases.ja.md  usecases.md
migrations/: 0001_init.sql
thoughts/ledgers/: CONTINUITY_CLAUDE-rs-ioc-vault-mvp.md
