[package]
edition.workspace = true
license.workspace = true
name = "ioc-vault-adapters"
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["urlhaus", "threatfox", "cisa-kev"]
urlhaus = []
threatfox = []
cisa-kev = []

[dependencies]
ioc-vault-core = { workspace = true }
ioc-vault-collect = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
