[package]
edition.workspace = true
license.workspace = true
name = "ioc-vault-core"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
idna = { workspace = true }
ipnet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
