[package]
edition.workspace = true
license.workspace = true
name = "ioc-vault-export"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ioc-vault-core = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
