[package]
edition.workspace = true
license.workspace = true
name = "ioc-vault-store"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ioc-vault-core = { workspace = true }

chrono = { workspace = true }
ipnet = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tokio = { workspace = true }
