[package]
edition.workspace = true
license.workspace = true
name = "rs-ioc-vault"
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["default-adapters"]
default-adapters = ["urlhaus", "threatfox", "cisa-kev"]
urlhaus = ["ioc-vault-adapters/urlhaus"]
threatfox = ["ioc-vault-adapters/threatfox"]
cisa-kev = ["ioc-vault-adapters/cisa-kev"]

[dependencies]
ioc-vault-core = { workspace = true }
ioc-vault-store = { workspace = true }
ioc-vault-collect = { workspace = true }
ioc-vault-adapters = { workspace = true }
ioc-vault-export = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
